src/objects/SocialPost.object
<CustomObject>
    <fields>
        <fullName>Ave_System_Time_Outbound__c</fullName>
        <formula>CreatedDate -  Posted</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ave. System Time_Outbound</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Created_Date_Time__c</fullName>
        <description>created by Salesforce for reporting purposes</description>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Social_Post_Field__c</fullName>
        <formula>ABS((CreatedDate - Posted)*24*60)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case creation time in minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>test__c</fullName>
        <formula>(HarvestDate  -  Posted) *24 *60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>test</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>Social_posts_without_case</fullName>
        <columns>Name</columns>
        <columns>Persona</columns>
        <columns>Content</columns>
        <columns>Posted</columns>
        <columns>ReviewedStatus</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Parent</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>ReviewedStatus</field>
            <operation>equals</operation>
            <value>Needed</value>
        </filters>
        <label>Social posts without case</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>